--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "framer-motion": "^12.9.4",
+    "lucide-react": "^0.507.0",
     "next": "15.3.1",
     "postcss": "^8.5.3",
     "react": "^19.0.0",
